Implementation class and refresh of the products on the front